--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,17 @@
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
           for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.</li>
 
+        <li>Bernhard Haslhofer, Rainer Simon. 2011. Historic Map Annotations with YUMA. In <i>Workshop on 'Using the OAC Model
+          for Annotation Interoperability'</i>. March 24-15, 2011. Chicago, IL, USA.</li>
+
+        <li>Rainer Simon, Bernhard Haslhofer, Werner Robitza, Elaheh Momeni. 2011. Semantically Augmented Annotations in
+          Digitized Map Collections. In <i>Proceedings of the 11th Annual International ACM/IEEE Joint Conference on 
+          Digital Libraries</i> (JCDL '11). ACM, New York, NY, USA, pp. 199-202.</li>
+
+        <li>Matthias Baldauf, Rainer Simon. 2010. Getting Context on the Go: Mobile Urban Exploration with Ambient Tag Clouds.
+          In <i>Proceedings of the 6th Workshop on Geographic Information Retrieval</i> (GIR '10). ACM, New York, NY, USA, 
+          Article 11, 2 pages.</li>
+
         <li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
           Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li>
 
