--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,9 @@
           In <i>Proceedings of the 6th Workshop on Geographic Information Retrieval</i> (GIR '10). ACM, New York, NY, USA, 
           Article 11, 2 pages.</li>
 
+        <li>Rainer Simon, Joachim Korb, Christian Sadilek, Rainer Schmidt. 2009. Collaborative Map Annotation in the Context of 
+          Historical GIS. In <i>5th IEEE International Conference on E-Science Workshops</i>, pp.139-142.</li>
+
         <li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
           Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li>
 
