--- a/publications.html
+++ b/publications.html
@@ -55,16 +55,24 @@
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
           for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.</li>
 
-        <li>Bernhard Haslhofer, Rainer Simon. 2011. Historic Map Annotations with YUMA. In <i>Workshop on 'Using the OAC Model
-          for Annotation Interoperability'</i>. March 24-15, 2011. Chicago, IL, USA.</li>
-
         <li>Rainer Simon, Bernhard Haslhofer, Werner Robitza, Elaheh Momeni. 2011. Semantically Augmented Annotations in
           Digitized Map Collections. In <i>Proceedings of the 11th Annual International ACM/IEEE Joint Conference on 
           Digital Libraries</i> (JCDL '11). ACM, New York, NY, USA, pp. 199-202.</li>
 
+        <li>Bernhard Haslhofer, Rainer Simon, Robert Sanderson, Herbert Van de Sompel. 2011. The Open Annotation
+          Collaboration (OAC) Model. In <i>Workshop on Multimedia on the Web 2011</i> (MMWeb 2011). September 8, 2011.
+          Graz, Austria.</li>
+
+        <li>Bernhard Haslhofer, Rainer Simon. 2011. Historic Map Annotations with YUMA. In <i>Workshop on 'Using the OAC Model
+          for Annotation Interoperability'</i>. March 24-15, 2011. Chicago, IL, USA.</li>
+
         <li>Matthias Baldauf, Rainer Simon. 2010. Getting Context on the Go: Mobile Urban Exploration with Ambient Tag Clouds.
           In <i>Proceedings of the 6th Workshop on Geographic Information Retrieval</i> (GIR '10). ACM, New York, NY, USA, 
           Article 11, 2 pages.</li>
+
+        <li>Bernhard Haslhofer, Elaheh Momeni, Manuel Gay, Rainer Simon. 2010. Augmenting Europeana Content with Linked Data
+          Resources. In <i>Proceedings of the 6th International Conference on Semantic Systems</i> (I-SEMANTICS '10). ACM, 
+          New York, NY, USA. Article 40, 3 pages.</li>
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Rainer Schmidt. 2009. Collaborative Map Annotation in the Context of 
           Historical GIS. In <i>5th IEEE International Conference on E-Science Workshops</i>, pp.139-142.</li>
