--- a/publications.html
+++ b/publications.html
@@ -35,8 +35,8 @@
           Location-Based Interaction Under Real-World Conditions. In <i>Journal of Location Based Services</i>.
           2, 1 (March 2008), pp. 24-40.</li>
 
-        <li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
-          Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li>
+        <!-- li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
+          Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li -->
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications.
           In <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
