--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@
           pp. 250-252.</li>
 
         <li>Georg Niklfeld, Hermann Anegg, Michael Pucher, Raimund Schatz, Rainer Simon, Florian Wegscheider, Alexander 
-          Gassner, Michael Jank, Günther Pospischil. 2005. Device Independent Mobile Multimodal User Interfaces with the
+          Gassner, Michael Jank, G&uuml;nther Pospischil. 2005. Device Independent Mobile Multimodal User Interfaces with the
           MONA Multimodal Presentation Server. In <i>Eurescom Summit 2005</i>. April 27-29, 2005. Heidelberg, Germany.</li>
 
         <li>Rainer Simon, Michael Jank, Florian Wegscheider. 2004. A Generic UIML Vocabulary for Device- and Modality Independent
