--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <body>
     <div id="menu">
       <ul>
-        <li class="fixed"><a href="index.html">Home</a></li>	
-        <li class="cv"><a href="cv.html">CV</a></li>
-        <li class="publications"><a href="publications.html">Publications</a></li>
+        <li><a href="index.html">Home</a></li>	
+        <li><a href="publications.html">Publications</a></li>
       </ul>
     </div>
 
