--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
      <h1>CURRENT RESEARCH PROJECTS</h1>
      <ul>
-       <li><a href="http://pelagios-project.blogspot.co.uk">Pelagios</li>
-       <li><a href="http://www.x-net.at/explore-en/backmeup">BackMeUp</li>
+       <li><a href="http://pelagios-project.blogspot.co.uk">Pelagios</a></li>
+       <li><a href="http://www.x-net.at/explore-en/backmeup">BackMeUp</a></li>
      </ul>
 
      <h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
