--- a/publications.html
+++ b/publications.html
@@ -2,20 +2,12 @@
   <head>	
     <title>Dr. Rainer Simon - Publications</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-      #menu .fixed a {
-        background: url(publications.png);
-        background-position: 0px 0px;
-        width: 109px;
-      }
-    </style>
   </head>
   <body>
     <div id="menu">
       <ul>
-        <li class="home"><a href="index.html">Home</a></li>	
-        <li class="cv"><a href="cv.html">CV</a></li>
-        <li class="fixed"><a href="publications.html">Publications</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="publications.html">Publications</a></li>
       </ul>
     </div>
     <div id="content">
