--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
   <body>
     <div id="menu">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>	
+        <li class="active"><a href="index.html">About Me</a></li>	
         <li><a href="publications.html">Publications</a></li>
       </ul>
     </div>
 
     <div id="content">
-      <img src="rainer.jpg" class="photo">
+      <img src="img/rainer.jpg" class="photo">
       <h1>Dr. Rainer Simon</h1>
       <p class="contactInfo">
-        E-Mail: <a href="mailto:rainer@no5.at">rainer@no5.at</a><br/>
-        Twitter: <a href="http://twitter.com/aboutgeo">@aboutgeo</a><br/>
-        Github: <a href="http://github.com/rsimon">rsimon</a>
-      </p>
+        <a href="mailto:rainer@no5.at"><img src="img/email.png" title="E-Mail"/></a>
+        <a href="http://twitter.com/aboutgeo"><img src="img/twitter.png" title="Twitter"/></a>
+        <a href="http://github.com/rsimon"><img src="img/github.png" title="Github"/></a>
       <p>
-        <a href="http://www.mendeley.com/profiles/rainer-simon/"><img border="0" src="http://www.mendeley.com/embed/icon/1/blue/small" alt="Research papers by Rainer Simon"/></a>			
-      </p>
 
       <p class="intro">
         I'm a scientist at the 
