--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
   <body>
     <div id="menu">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">About Me</a></li>
         <li class="active"><a href="publications.html">Publications</a></li>
       </ul>
     </div>
