--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="mailto:rainer@no5.at"><img src="img/email.png" title="E-Mail"/></a>
         <a href="http://twitter.com/aboutgeo"><img src="img/twitter.png" title="Twitter"/></a>
         <a href="http://github.com/rsimon"><img src="img/github.png" title="Github"/></a>
+        <a href="http://no5-geekvault.blogspot.com"><img src="img/blogger.png" title="Blog"/></a>
       <p>
 
       <p class="intro">
