--- a/publications.html
+++ b/publications.html
@@ -18,34 +18,36 @@
 
         <li>Rainer Simon, Bernhard Haslhofer, Joachim Jung. 2011. Annotations, Tags and Linked Data. Metadata Enrichment in 
           Online Map Collections Through Volunteer-Contributed Information. In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), 
-          pp. 129-137.</li>   
+          pp. 129-137. ISSN 1790-3769.</li>   
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Matthias Baldauf. 2010. Explorative User Interfaces for
-          Browsing Historical Maps on the Web. In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), pp. 132-143.</li>   
+          Browsing Historical Maps on the Web. In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), pp. 132-143.
+           ISSN 1790-3769.</li>   
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Thomas Grechenig. 2008. GeoPointing: Evaluating the Performance of Orientation-Aware
           Location-Based Interaction Under Real-World Conditions. In <i>Journal of Location Based Services</i>.
-          2, 1 (March 2008), pp. 24-40.</li>
+          2, 1 (March 2008), pp. 24-40. ISSN 1748-9725.</li>
 
         <!-- li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
           Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li -->
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications.
-          In <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
+          In <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794. ISSN 1361-1682.</li>
       </ul>
 
       <h1>BOOK CHAPTER</h1>
       <ul>
         <li>Rainer Simon, Harald Kunczier, Hermann Anegg. 2007. Towards Orientation-Aware Location Based Mobile Services.
           In <i>Location Based Services and TeleCartography</i>. Georg Gartner, William Cartwright, Michael P. Peterson
-          (Eds.) Springer Lecture Notes in Geoinformation and Cartography, pp. 279-290.</li>
+          (Eds.) Springer Lecture Notes in Geoinformation and Cartography, pp. 279-290. ISBN 978-3-540-36727-7.</li>
       </ul>
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
         <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
-          for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.</li>
+          for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.
+          ISBN ISBN 978-3-540-23013-7.</li>
 
         <li>Rainer Simon, Bernhard Haslhofer, Werner Robitza, Elaheh Momeni. 2011. Semantically Augmented Annotations in
           Digitized Map Collections. In <i>Proceedings of the 11th Annual International ACM/IEEE Joint Conference on 
@@ -58,35 +60,44 @@
         <li>Bernhard Haslhofer, Rainer Simon. 2011. Historic Map Annotations with YUMA. In <i>Workshop on 'Using the OAC Model
           for Annotation Interoperability'</i>. March 24-15, 2011. Chicago, IL, USA.</li>
 
+        <li>Rainer Simon, Christian Sadilek, Joachim Korb, Matthias Baldauf, Bernhard Haslhofer. 2010. Tag Clouds and Old 
+          Maps: Annotations as Linked Spatiotemporal Data in the Cultural Heritage Domain. In <i>Proceedings of the Workshop
+          on Linked Spatiotemporal Data 2010</i>. Septbember 14, 2010. Zurich, Switzerland. CEUR-WS.org/Vol-691. Article 2,
+          12 pages. ISSN 1613-0073.
+
         <li>Matthias Baldauf, Rainer Simon. 2010. Getting Context on the Go: Mobile Urban Exploration with Ambient Tag Clouds.
           In <i>Proceedings of the 6th Workshop on Geographic Information Retrieval</i> (GIR '10). ACM, New York, NY, USA, 
-          Article 11, 2 pages.</li>
+          Article 11, 2 pages. ISBN 978-1-60558-826-1.</li>
 
         <li>Bernhard Haslhofer, Elaheh Momeni, Manuel Gay, Rainer Simon. 2010. Augmenting Europeana Content with Linked Data
           Resources. In <i>Proceedings of the 6th International Conference on Semantic Systems</i> (I-SEMANTICS '10). ACM, 
-          New York, NY, USA. Article 40, 3 pages.</li>
+          New York, NY, USA. Article 40, 3 pages. ISBN 978-1-4503-0014-8.</li>
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Rainer Schmidt. 2009. Collaborative Map Annotation in the Context of 
-          Historical GIS. In <i>5th IEEE International Conference on E-Science Workshops</i>, pp.139-142.</li>
+          Historical GIS. In <i>5th IEEE International Conference on E-Science Workshops</i>, pp.139-142.
+          ISBN 978-1-4244-5946-9.</li>
 
         <li>Peter Fr&ouml;hlich, Gerhard Obernberger, Rainer Simon, Peter Reichl. 2008. Exploring the Design Space of 
           Smart Horizons. In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with 
-          Mobile Devices and Services (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
+          Mobile Devices and Services (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.
+          ISBN 978-1-59593-952-4.</li>
+
+        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web. In <i>Proceedings
+          of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY, USA, pp. 381-390.
+          ISBN 978-1-59593-654-7.</li>
 
         <li>Peter Fr&ouml;hlich, Rainer Simon, Elisabeth Muss, Andrea Stepan, Peter Reichl. 2007. Envisioning Future 
           Mobile Spatial Applications. In <i>Proceedings of the 21st British HCI Group Annual Conference on People 
-          and Computers</i> (BCS-HCI 2007), pp. 35.38.</li>
-
-        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web. In <i>Proceedings
-          of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY, USA, pp. 381-390.</li>
+          and Computers</i> (BCS-HCI 2007), pp. 35.38. ISBN 978-1-902505-95-4.</li>
 
         <li>Stefan Maierhofer, Rainer Simon, Robert F. Tobler. 2007. Simplified Guided Visibility Sampling for Location 
           Based Services. In <i>Proceedings of the 12th Int. Conference on Urban, Regional Development and Information
           Society</i> (CORP2007). Vienna, Austria.</li>
 
         <li>Peter Fr&ouml;hlich, Rainer Simon, Christian Kaufmann. 2007. Adding Space to Location in Mobile Emergency Response
-          Technologies. In <i>International Workshop on Mobile Information Technology for Emergency Response</i>
-          (MobileResponse 2007), St. Augustin, Germany. Springer LNCS, pp. 71-76.</li>
+          Technologies. In <i>Mobile Response. First International Workshop on Mobile Information Technology for 
+          Emergency Response</i> (MobileResponse 2007). St. Augustin, Germany. Springer LNCS, Vol. 4458, pp. 71-76.
+          ISBN 978-3-540-75667-5.</li>
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2006. Beyond Location Based - The Spatially Aware Mobile Phone.
           In <i>Proceedings of the 6th International Symposium on Web and Wireless Geographical Information Systems</i>
