--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,10 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>Rainer Simon, Elton Barker, Leif Isaksen. 2012. Exploring Pelagios: A Visual Browser for Geo-Tagged 
+          Datasets. In <i>International Workshop on Supporting Users' Exploration of Digital Libraries</i>. September
+          27, 2012. Paphos, Cyprus.</li>
+
         <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
           for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.
