--- a/publications.html
+++ b/publications.html
@@ -105,12 +105,12 @@
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2006. Beyond Location Based - The Spatially Aware Mobile Phone.
           In <i>Proceedings of the 6th International Symposium on Web and Wireless Geographical Information Systems</i>
-          (W2GIS 2006). Vol. 4295 (2006), pp. 12-21. Springer LNCS.</li>
+          (W2GIS 2006). Vol. 4295 (2006), pp. 12-21. Springer LNCS. ISBN 978-3-540-49466-9.</li>
 
 	<li>Peter Fr&ouml;hlich, Rainer Simon, Lynne Baillie, Hermann Anegg. 2006. Comparing Conceptual Designs for
           Mobile Access to Geo-Spatial Information. In <i>Proceedings of the 8th International Conference
           on Human-Computer Interaction with Mobile Devices and Services</i> (MobileHCI 06). ACM, New York, YN, USA, 
-          pp. 109-112.</li>
+          pp. 109-112. ISBN 1-59593-390-5.</li>
 
         <li>Rainer Simon. 2006. The Creative Histories Mobile Explorer - Implementing a 3D Multimedia Tourist Guide
           for Mass-Market Mobile Phones. In <i>Proceedings of the EVA Vienna 2006 Conference</i>. August 27-30, 2006.
@@ -118,11 +118,12 @@
 
         <li>Rainer Simon, Florian Wegscheider, Konrad Tolar. 2005. Tool-Supported Single Authoring for Device Independence
           and Multimodality. In <i>Proceedings of the 7th International Conference on Human Computer Interaction with
-          Mobile Devices &amp; Services</i> (MobileHCI 2005). ACM, New York, NY, USA, pp. 91-98.</li>
+          Mobile Devices &amp; Services</i> (MobileHCI 2005). ACM, New York, NY, USA, pp. 91-98.
+          ISBN 1-59593-089-2.</li>
 
         <li>Lynne Baillie, Rainer Simon, Raimund Schatz, Florian Wegscheider, Hermann Anegg. 2005. Gathering Requirements
-          for Multimodal Mobile Applications. In <i>Proceedings of the 7th IEEE International Conference on 
-          Information Technology Interfaces</i> (ITI 2005), pp.240-245.</li>
+          for Multimodal Mobile Applications. In <i>Proceedings of the 27th IEEE International Conference on 
+          Information Technology Interfaces</i> (ITI 2005), pp.240-245. ISBN 953-7138-02-X.</li>
 
         <li>Raimund Schatz, Rainer Simon, Hermann Anegg, Florian Wegscheider, Georg Niklfeld. 2005. Developing Mobile
           Multimodal Applications. In <i>Proceedings of the 19th British HCI Group Annual Conference</i>. Vol.2,
@@ -134,11 +135,11 @@
 
         <li>Rainer Simon, Michael Jank, Florian Wegscheider. 2004. A Generic UIML Vocabulary for Device- and Modality Independent
           User Interfaces. In <i>Proceedings of the 13th International World Wide Web Conference on Alternate Track Papers &amp;
-          Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 434-435.</li>
+          Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 434-435. ISBN 1-58113-912-8.</li>
 
         <li>Florian Wegscheider, Thomas Dangl, Michael Jank, Rainer Simon. 2004. A Multimodal Interaction Manager for Device
           Independent Mobile Applications. In <i>Proceedings of the 13th International World Wide Web Conference on Alternate
-          Track Papers &amp; Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 272-273.</li>
+          Track Papers &amp; Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 272-273. ISBN 1-58113-912-8.</li>
 
         <li>Hermann Anegg, Thomas Dangl, Michael Jank, Georg Niklfeld, Michael Pucher, Raimund Schatz, Rainer Simon, Florian
           Wegscheider. 2004. Multimodal Interfaces in Mobile Devices - The MONA Project. In <i>MobEA II - Emerging Applications
