--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@
         <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
           for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.
-          ISBN ISBN 978-3-540-23013-7.</li>
+          ISBN 978-3-540-23013-7.</li>
 
         <li>Rainer Simon, Bernhard Haslhofer, Werner Robitza, Elaheh Momeni. 2011. Semantically Augmented Annotations in
           Digitized Map Collections. In <i>Proceedings of the 11th Annual International ACM/IEEE Joint Conference on 
