--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>	
-    <title>Dr. Rainer Simon - Austrian Institute of Technology</title>
+    <title>Dr. Rainer Simon - About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">	
   </head>
   <body>
