--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         and as a systems architect for a <a href="http://www.a1.net/">major Austrian mobile network operator</a>.
         My PhD thesis entitled <a href="http://pub-inf.tuwien.ac.at/showentry.php?ID=172595">&quot;Mobilizing the 
         Geospatial Web: A Framework and Conceptual Model for Spatially Aware Mobile Web Applications&quot;</a>
-        investigated how the boost of innovation that recent Web mapping and  mashup technologies have brought to
+        investigated how the boost of innovation that Web mapping and mashup technologies have brought to
         the World Wide Web can be transferred to the mobile domain. It is available for download
         <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">from the library of the Vienna University of Technology</a>.
       </p>
