--- a/index.html
+++ b/index.html
@@ -98,8 +98,17 @@
 
      <h1>CURRENT RESEARCH PROJECTS</h1>
      <ul>
-       <li><a href="http://pelagios-project.blogspot.co.uk">Pelagios</a></li>
-       <li><a href="http://www.x-net.at/explore-en/backmeup">BackMeUp</a></li>
+       <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
+         from the domain of Ancient World research through the places they refer to using Linked Data technologies.
+         <a href="http://pelagios-project.blogspot.co.uk">Read more...</a><br/>
+         <i>Funded by <a href="http://www.jisc.ac.uk/">JISC</a>, United Kingdom.</i>
+       </li>
+       <li><strong>BackMeUp</strong>. An interdisciplinary research project
+         that aims to raise awareness of privacy and loss of personal data scattered across social networks
+         and Web 2.0 platforms. BackMeUp addresses social, judicial as well as technical issues.
+         <a href="http://www.x-net.at/explore-en/backmeup">Read more...</a><br/>
+         <i>Funded by the <a href="http://www.ffg.at/">Austrian Research Promotion Agency</a> FFG.</i>
+       </li>
      </ul>
 
      <h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
