--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
      <ul>
        <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
          from the domain of Ancient World research through the places they refer to using Linked Data technologies.
-         <a href="http://pelagios-project.blogspot.co.uk">Read more...</a><br/>
+         <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
          <i>Funded by <a href="http://www.jisc.ac.uk/">JISC</a>, United Kingdom.</i>
        </li>
        <li><strong>BackMeUp</strong>. An interdisciplinary research project
          that aims to raise awareness of privacy and loss of personal data scattered across social networks
          and Web 2.0 platforms. BackMeUp addresses social, judicial as well as technical issues.
-         <a href="http://www.x-net.at/explore-en/backmeup">Read more...</a><br/>
+         <a href="http://www.x-net.at/explore-en/backmeup">Find out more...</a><br/>
          <i>Funded by the <a href="http://www.ffg.at/">Austrian Research Promotion Agency</a> FFG.</i>
        </li>
      </ul>
