--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <a href="http://twitter.com/aboutgeo"><img src="img/twitter.png" title="Twitter"/></a>
         <a href="http://github.com/rsimon"><img src="img/github.png" title="Github"/></a>
         <a href="http://no5-geekvault.blogspot.com"><img src="img/blogger.png" title="Blog"/></a>
+        <a href="http://www.linkedin.com/in/rainersimon"><img src="img/linkedin.png" title="LinkedIn"/></a>
+        <a href="http://www.xing.com/profile/Rainer_Simon2"><img src="img/xing.png" title="XING"/></a>
       <p>
 
       <p class="intro">
