--- a/ptolemy/index.html
+++ b/ptolemy/index.html
@@ -206,6 +206,9 @@
     </script>
   </head>
   <body>
+    <p>
+      This demo is using OpenCV to automatically identify place name labels on scans of old maps. 
+    </p>
     <h1>Original<h1>
     <canvas id="map"></canvas>
 
