--- a/ptolemy/index.html
+++ b/ptolemy/index.html
@@ -207,7 +207,8 @@
   </head>
   <body>
     <p>
-      This demo is using OpenCV to automatically identify place name labels on scans of old maps. 
+      An early demo/experiment for using the Open Source computer vision toolkit <a href="http://opencv.willowgarage.com/">OpenCV</a>
+      to automatically identify place name labels on scans of old maps. 
     </p>
     <h1>Original<h1>
     <canvas id="map"></canvas>
