--- a/ptolemy/index.html
+++ b/ptolemy/index.html
@@ -206,7 +206,7 @@
     </script>
   </head>
   <body>
-    <p>
+    <p style="font-size:12px; padding:20px 0px;">
       An early demo/experiment for using the Open Source computer vision toolkit <a href="http://opencv.willowgarage.com/">OpenCV</a>
       to automatically identify place name labels on scans of old maps. 
     </p>
