--- a/ptolemy/index.html
+++ b/ptolemy/index.html
@@ -207,8 +207,9 @@
   </head>
   <body>
     <p style="font-size:12px; padding:20px 0px;">
-      An early demo/experiment for using the Open Source computer vision toolkit <a href="http://opencv.willowgarage.com/">OpenCV</a>
-      to automatically identify place name labels on scans of old maps. 
+      An early experiment/proof-of-concept for using the Open Source computer vision 
+      toolkit <a href="http://opencv.willowgarage.com/">OpenCV</a> to automatically pre-identify 
+      candidate place name labels on scans of old maps. 
     </p>
     <h1>Original<h1>
     <canvas id="map"></canvas>
