--- a/ptolemy/index.html
+++ b/ptolemy/index.html
@@ -205,8 +205,8 @@
 	}
     </script>
   </head>
-  <body>
-    <p style="font-size:12px; padding:20px 0px;">
+  <body style="padding:10px">
+    <p style="font-size:15px; padding:20px 0px;">
       An early experiment/proof-of-concept for using the Open Source computer vision 
       toolkit <a href="http://opencv.willowgarage.com/">OpenCV</a> to automatically pre-identify 
       candidate place name labels on scans of old maps. 
