SVG style tweaks

--- a/josephinische_landaufnahme/index.html
+++ b/josephinische_landaufnahme/index.html
@@ -62,7 +62,7 @@
             }
 
             var polygon = new No5.Seajax.Shapes.Polygon(points);
-            polygon.getElement().attr({"fill":"#0fff00", "stroke-color":"#ff0000"});
+            polygon.getElement().attr({"fill":"#ff0000", "fill-opacity":"0.2", "stroke":"#ff0000"});
             polygon.attachTo(viewer);
             shapes.push(polygon);
           }
