--- a/josephinische_landaufnahme/index.html
+++ b/josephinische_landaufnahme/index.html
@@ -11,10 +11,28 @@
       }
     
       #viewer{
+        position:absolute;
+        top:0px;
+        left:0px;
         width:100%;
         height:100%;
         margin:0px;
         color: white;   /* for error messages */
+      }
+
+      #contact {
+        max-width:350px;
+        position: absolute;
+        top: 10px; 
+        right: 10px;
+        font-size:11px;
+        border:1px solid black;
+        background-color:#fff;
+        color:#000;
+        padding:10px 15px 10px 10px;
+        -moz-box-shadow: 3px 3px 4px #000;
+        -webkit-box-shadow: 3px 3px 4px #000;
+        box-shadow: 3px 3px 4px #000;
       }
     </style>
 
@@ -79,5 +97,10 @@
 
   <body>
     <div id="viewer" width="100%" height="100%"></div>
+    <div id="contact">
+      Place name labels on this map were identified automatically using image processing techniques (implemented with 
+      <a href="http://opencv.willowgarage.com">OpenCV</a>). <a href="mailto:rainer.simon@ait.ac.at">Contact us</a> for more
+      information!
+    </div>
   </body>
 </html>
