--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -27,7 +27,7 @@
       are below.
     </p>
 
-    <a href="#"><img src="images/british_isles_thumb.jpg" /></a>
+    <a href="detection/ptolemy_britain.html"><img src="images/british_isles_thumb.jpg" /></a>
     <a href="detection/portolan.html"><img src="images/portolan_thumb.jpg" /></a>
     <a href="detection/josephinische_landesaufnahme.html"><img src="images/josephinische_landesaufnahme_thumb.jpg" /></a>
 
