--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -15,8 +15,9 @@
     </p>
 
     <p>
-      This work is in an early stage &amp; yet unfunded, so bear with us regarding the 
-      bare-bone state of this site!
+      This work is in an early stage &amp; we don't have an offical project set up for this yet.
+      (Many thanks go out to our intern Peter, for taming OpenCV and devising increasingly clever
+      image filtering methods!) So bear with us regarding the  bare-bone state of this site!
     </p> 
 
     <h2>Automatic Toponym Detection</h2>
