--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -15,9 +15,9 @@
     </p>
 
     <p>
-      This work is in an early stage &amp; we don't have an offical project set up for this yet.
-      (Many thanks go out to our intern Peter, for taming OpenCV and devising increasingly clever
-      image filtering methods!) So bear with us regarding the  bare-bone state of this site!
+      This work is in its earliest stages &amp; we have no offical project set up around this yet.
+      So bear with us regarding the bare-bone state of this site! (Many thanks go out to our intern
+      Peter, for taming OpenCV and devising increasingly clever image filtering methods!) 
     </p> 
 
     <h2>Automatic Toponym Detection</h2>
