--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -47,7 +47,7 @@
       the sheer magnitude of the task makes it challenging to deal with: map collections often host 1.000s of maps,
       each potentially containing 100s of place names. Our goal is to build
       <a href="http://github.com/rsimon/toponymotator">tools that allow human users 
-      to perform selection, transcription, and annotation tasks as quickly as possible</a>. 
+      to perform selection, transcription, and annotation tasks as efficiently as possible</a>. 
     </p>
 
     <h2>Annotated Maps: Use Cases</h2>
