--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -53,7 +53,7 @@
     <h2>Annotated Maps: Use Cases</h2>
     <p>
       Once a map's place names are annotated there are plenty of benefits. Enhanced search & linking with a historic
-      Gazetteer are likely the most obvious ones. But there are also more playful, casual use cases:
+      Gazetteer are likely the most important ones. But there are also more playful, casual use cases:
 
       <ul>
         <li>
