--- a/toponym_identification/detection/ptolemy_britain.html
+++ b/toponym_identification/detection/ptolemy_britain.html
@@ -49,6 +49,7 @@
 
     canvas.width = width * 2;
     canvas.height = height * 2;
+    canvas.style.margin = '0px 0px -4px 0px';
 			
     context.scale(2, 2);
     context.translate(width/2, height/2);
