--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -52,12 +52,12 @@
 
     <h2>Annotated Maps: Use Cases</h2>
     <p>
-      Once a map's place names are annotated there are plenty of benefits. Enhanced search & linking with a historic
+      Once a map's place names are annotated, there are plenty of benefits. Enhanced search & linking with a historic
       Gazetteer are likely the most important ones. But there are also more playful, casual use cases:
 
       <ul>
         <li>
-          <strong>Map re-labelling.</strong> Using toponym detection and 
+          <strong>Map re-labelling.</strong> Using toponym detection and a technique called
           <a href="http://en.wikipedia.org/wiki/Inpainting">inpainting</a>, we can replace the original labels
           for better readability, or to &quot;translate&quot; them to their modern-day counterparts.
           <a href="relabeling/index.html">See a demo.</a>
