--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -36,8 +36,15 @@
     <p>
       Once we have identified candidates that may be place names, we need to transcribe them. Automating the
       transcription is the most challenging step in the process. We are currently experimenting
-      with <a href="http://gamera.informatik.hsnr.de/">Gamera</a> to get a feel for what can be achieved with
-      state of the art tools.
+      with the document analysis framework <a href="http://gamera.informatik.hsnr.de/">Gamera</a> 
+      to get a feel for what can be achieved with state of the art tools.
+    </p>
+    <p>
+      Additionally, we aim to exploit the <strong>layout</strong> of identified candidates to deduce possible 
+      place names based on existing toponym lists. (E.g. in the case of
+      <a href="http://en.wikipedia.org/wiki/Portolan_chart">portolan charts</a>, place name labels are arranged
+      in sequence along the coastline. This may potentially allow for some degree of &quot;interpolation&quot;
+      of unidentified toponyms.)
     </p>
 
     <h2>Manual Annotation</h2>
