--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -59,10 +59,9 @@
       For most old maps, machines still fail miserably in map transcription tasks. Humans, on the other
       hand, can read and transcribe place name labels with relative (depending on the type of map) ease. However, 
       the sheer magnitude of the task makes it challenging to deal with: map collections often host 1.000s of maps,
-      each potentially containing 100s of place names. Our goal is to build
-      <a href="http://github.com/rsimon/toponymotator">tools that allow human users 
-      to perform selection, transcription, and annotation tasks as efficiently as possible</a>, or quickly validate 
-      or correct automatically generated results.
+      each potentially containing 100s of place names. Our goal is to build tools that allow human users to 
+      <a href="http://github.com/rsimon/toponymotator">perform selection, transcription, and annotation tasks as 
+      efficiently as possible</a>, or to quickly validate and correct automatically generated results.
     </p>
 
     <h2>Annotated Maps: Use Cases</h2>
