--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -31,14 +31,27 @@
 
     <div class="captioned_image">
       <a href="detection/ptolemy_britain.html"><img src="images/british_isles_thumb.jpg" /></a>
+      <p class="caption">
+        Ptolemaic Map Of The British Isles, Ca. 1480 ff.. 60v-61 (British Library)
+      </p>
     </div>
 
     <div class="captioned_image">
       <a href="detection/portolan.html"><img src="images/portolan_thumb.jpg" /></a>
+      <p class="caption">
+        Salvator Oliva, Mediterranean. HM 2515. PORTOLAN ATLAS. Marseilles, 1619.<br/>
+        Source: <a href="http://commons.wikimedia.org/wiki/File:Salvator_Oliva._Mediterranean._HM_2515._PORTOLAN_ATLAS._Marseilles,_1619.B.jpg">Wikimedia Commons</a>
+      </p> 
     </div>
 
     <div class="captioned_image">
       <a href="detection/josephinische_landesaufnahme.html"><img src="images/josephinische_landesaufnahme_thumb.jpg" /></a>
+      <p class="caption">
+        Josephinische Landesaufnahme: Gebiet von Mooskirchen bis Grazer Feld, Steiermark, Österreich, 1764-1787.<br/>
+        Source: 
+        <a href="http://de.wikipedia.org/w/index.php?title=Datei:Josephinische_Landesaufnahme_Mooskirchen_Grazer_Feld.jpg">Wikimedia
+        Commons</a>
+      </p>
     </div>
 
     <h2>Automatic Toponym Transcription</h2>
